<resources>
    <string name="app_name">Jukebox</string>
    <string name="action_settings">Settings</string>
    <!-- Sign In Activity is first, so it's naming the app -->
    <string name="title_activity_sign_in">Jukebox</string>

    <!-- LOGIN USER CONSTANTS -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="register">Register</string>
    <string name="passwords_dont_match">Passwords Do Not Match</string>
    <string name="sign_in_activity_label">Sign In</string>
    <string name="error_invalid_password">Please enter valid password</string>
    <string name="error_required_field">Field is Required</string>
    <string name="action_log_in_short">Log In Short</string>
    <string name="logout">Log out</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- LOGIN INTO PARTY CONSTANTS -->
    <string name="prompt_party_name">Party Name</string>
    <string name="prompt_pass_phrase">Pass Phrase</string>
    <string name="join_party">Join Party</string>
    <string name="create_party">Create Party</string>
    <string name="passphrases_dont_match">Pass Phrases must match</string>

    <!-- -->
    <string name="sign_in_spotify">Sign Into Spotify</string>
    <string name="title_activity_create_party">CreatePartyActivity</string>
    <string name="title_activity_party_view">PartyViewActivity</string>

    <!-- facebook constants -->
    <string name="facebook_app_id">2186499241413302</string>
    <string name="fb_login_protocol_scheme">fb2186499241413302</string>

    <!-- Google Sign in constants -->
    <string name="server_client_id">461202061173-32phljv944lggo4310q702o6qskvag40.apps.googleusercontent.com</string>

    <string name="add_song">Add Song</string>

    <string name="welcome">Welcome to JukeBox</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="network_discoverable">Network Discoverable</string>
    <string name="link_shareable">Link Shareable</string>
    <string name="digit_code_shareable">5 Digit Code Shareable</string>
    <string name="juke_box_settings">Juke Box Settings</string>
    <string name="authentication_settings">Authentication Settings</string>
    <string name="application_settings">Application Settings</string>
    <string name="per_song">Per Song</string>
    <string name="user_settings">User Settings</string>
    <string name="whitelist">Whitelist</string>
    <string name="blacklist">Blacklist</string>
    <string name="jukebox_theme">Jukebox Theme</string>
    <string name="spotify_theme">Spotify Theme</string>
    <string name="join_button_text">Join</string>
    <string name="home_not_partying">You are not partying</string>
    <string name="home_partying">You are partying</string>
    <string name="home_host_party">Host</string>
    <string name="join_a_party">Join a Party</string>
    <string name="room_code_hint">Room Code</string>
    <string name="party_password_hint">Password</string>
    <string name="party_name_display"><b>%1$s</b></string>
    <string name="party_room_code_display">Room Code: %1$s</string>
    <string name="nearby_parties">Nearby Parties:</string>
    <string name="leave_party">Leave Party</string>
    <string name="party_manager">Party Manager</string>
    <string name="main_activity">Party</string>
    <string name="party_name_hint">Party Name</string>
</resources>
