<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.pmq.ui.JukeBoxActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ListView android:id="@+id/party_list"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:alwaysDrawnWithCache="true"
              android:dividerHeight="1dp"
              android:horizontalSpacing="3dp"
              android:scrollingCache="true"
              android:smoothScrollbar="true"
              android:stretchMode="columnWidth"
              android:verticalSpacing="3dp"/>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
                android:layout_marginTop="?android:attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp">

            <AutoCompleteTextView
                    android:id="@+id/party_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_party_name"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp">

            <EditText
                    android:id="@+id/party_passphrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_pass_phrase"
                    android:imeActionLabel="@string/action_log_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:selectAllOnFocus="false"
                    android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/join_party"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:text="@string/join_party" />

        <Button
                android:id="@+id/create_party"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:text="@string/create_party" />

        <TextView
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <Button
                android:id="@+id/sign_in_spotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_spotify" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
