<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/cat_grayscale_8_90"
    tools:context=".ui.Home">

    <TextView
        android:id="@+id/tvParty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="71dp"
        android:text="@string/home_not_partying"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRoomCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/room_code_display"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvParty" />

    <Button
        android:id="@+id/btnLeaveParty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorSecondary"
        android:text="@string/leave_party"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRoomCode" />

    <Button
        android:id="@+id/btnCreateParty"
        android:layout_width="147dp"
        android:layout_height="72dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="132dp"
        android:background="@color/colorSecondary"
        android:text="@string/home_host_party"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvParty" />

    <TextView
        android:id="@+id/tvJoinParty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="126dp"
        android:text="@string/join_a_party"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateParty" />

    <EditText
        android:id="@+id/etRoomCode"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/room_code_hint"
        android:inputType="textPersonName"
        android:textColor="@color/browser_actions_bg_grey"
        android:textColorHint="@color/browser_actions_bg_grey"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btnJoinByRoomCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJoinParty" />

    <Button
        android:id="@+id/btnJoinByRoomCode"
        android:layout_width="88dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorSecondary"
        android:text="@string/join_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etRoomCode"
        app:layout_constraintTop_toBottomOf="@+id/tvJoinParty" />

    <TextView
        android:id="@+id/tvNearbyParties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="280dp"
        android:text="@string/nearby_parties"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRoomCode" />

    <ScrollView
        android:id="@+id/svNearbyParties"
        android:layout_width="383dp"
        android:layout_height="360dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNearbyParties"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>